try fix input date on mobile

--- a/src/scss/form/__inputDate.scss
+++ b/src/scss/form/__inputDate.scss
@@ -25,6 +25,8 @@
 
         &:invalid {
             &::after {
+                position: relative
+                ;
                 display: block;
 
                 content: 'ДД.ММ.ГГГГ';
